[gd_scene load_steps=5 format=3 uid="uid://ci1sygvlcmi2r"]

[ext_resource type="Script" uid="uid://wkibfpck2vlu" path="res://src/menus/settings.gd" id="1_5mj52"]
[ext_resource type="Texture2D" uid="uid://m7ulyto74fdh" path="res://assets/ui/borderguhe.png" id="2_hnu5p"]
[ext_resource type="Texture2D" uid="uid://ceu2mijiblwj3" path="res://assets/ui/Square_Short.png" id="3_5menj"]
[ext_resource type="Theme" uid="uid://b2ph8ikxoqmwf" path="res://src/default.theme" id="4_1m1nu"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5mj52")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -166.5
offset_right = 179.5
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hnu5p")
expand_mode = 1

[node name="Reset" type="TextureButton" parent="TextureRect"]
layout_mode = 1
offset_left = 22.5
offset_top = 235.5
offset_right = 217.5
offset_bottom = 318.5
texture_normal = ExtResource("3_5menj")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="TextureRect/Reset"]
layout_mode = 0
offset_left = 8.0
offset_top = 17.0
offset_right = 174.0
offset_bottom = 60.0
theme = ExtResource("4_1m1nu")
text = "Restart from 
Day 1"
horizontal_alignment = 1

[node name="Close" type="TextureButton" parent="TextureRect"]
layout_mode = 1
offset_left = 283.5
offset_top = -10.5
offset_right = 478.5
offset_bottom = 41.5
texture_normal = ExtResource("3_5menj")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="TextureRect/Close"]
layout_mode = 0
offset_left = -28.5
offset_top = 13.5
offset_right = 137.5
offset_bottom = 56.5
theme = ExtResource("4_1m1nu")
text = "X"
horizontal_alignment = 1

[node name="Blur" type="TextureButton" parent="TextureRect"]
offset_left = 28.0
offset_top = 131.0
offset_right = 150.0
offset_bottom = 183.0
texture_normal = ExtResource("3_5menj")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="TextureRect/Blur"]
layout_mode = 0
offset_left = -28.5
offset_top = 13.5
offset_right = 137.5
offset_bottom = 56.5
theme = ExtResource("4_1m1nu")
text = "Blur"
horizontal_alignment = 1

[node name="Grain" type="TextureButton" parent="TextureRect"]
offset_left = 144.0
offset_top = 132.0
offset_right = 274.0
offset_bottom = 188.0
texture_normal = ExtResource("3_5menj")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="TextureRect/Grain"]
layout_mode = 0
offset_left = -23.0
offset_top = 13.0
offset_right = 143.0
offset_bottom = 56.0
theme = ExtResource("4_1m1nu")
text = "Film Grain"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 2
offset_left = -71.0
offset_top = -87.0
offset_right = 107.0
offset_bottom = -71.0
grow_horizontal = 2
max_value = 1.0
step = 0.0
value = 0.6

[node name="Label" type="Label" parent="HSlider2"]
layout_mode = 0
offset_left = -66.0
offset_top = -4.0
offset_right = -7.0
offset_bottom = 19.0
theme = ExtResource("4_1m1nu")
text = "Music"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = -71.0
offset_top = -60.0
offset_right = 106.0
offset_bottom = -44.0
grow_horizontal = 2
max_value = 1.0
step = 0.0
value = 0.6

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = -66.0
offset_top = -4.0
offset_right = -7.0
offset_bottom = 19.0
theme = ExtResource("4_1m1nu")
text = "Sound"

[connection signal="pressed" from="TextureRect/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="TextureRect/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="TextureRect/Blur" to="." method="_on_blur_pressed"]
[connection signal="pressed" from="TextureRect/Grain" to="." method="_on_grain_pressed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_sound_changed"]
